@@ -64,6 +64,7 @@ Cacti CHANGELOG
 -feature: Allow VRULE's in Cacti to specify an absolute timestamp in addition to [+/-]HH:MM
 -feature: Add 1 minute RRA and graph templates
 -feature: Add item select hilighting to main pages
+-feature: Let poller.php be more intelligent about poller intervals less than 60 seconds
 -compat: Add additional checking due to php-snmp changes in Windows
 
 0.8.6j
